[v#.#.#] ([month] [YYYY])
  - Hera: Add new layout with redesigned navigation
  - QA: Add View History link when viewing Issues/Content blocks
  - Upgraded gems:
    - [gem]
  - Bugs fixes:
    - [entity]:
      - [future tense verb] [bug fix]
    - Bug tracker items:
      - [item]
  - New integrations:
    - [integration]
  - Integration enhancements:
    - [integration]:
      - [future tense verb] [integration enhancement]
      - [integration bug fixes]:
        - [future tense verb] [integration bug fix]
  - Reporting enhancements:
    - [report type]:
      - [future tense verb] [reporting enhancement]
  - REST/JSON API enhancements:
    - [API entity]:
      - [future tense verb] [API enhancement]
  - Security Fixes:
    - High: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]
    - Medium: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]
    - Low: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]

v4.15.0 (December 2024)
  - Tags: Add custom ordering
  - Welcome Kit:
    - Add HTML report template
    - Add Issue and evidence templates
    - Update OWASP Top 10 methodology to latest version (2021)
  - Upgraded gems:
    - rails, rexml
  - Integration enhancements: 
    - Qualys: Add `cvss3_base`, `cvss3_temporal`, and `cvss3_version` as available vuln fields
  - Security Fixes:
    - High: Authenticated (author) persistent cross-site scripting

v4.14.0 (October 2024)
  - Kit Import: Use file name sequencing when a template file with the same name exists
  - Upgraded gems:
    - puma, rails, rexml

v4.13.0 (July 2024)
  - Attachments: Copy attachments when moving an evidence/note
  - Liquid: Make project-level collections available for Liquid syntax
  - Upgraded gems: nokogiri, rails, redcloth, rexml
  - Bugs fixes:
    - Navigation: Restore functionality of native browser back/forward buttons
  - Security Fixes: